Automatically backed up by Learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,7 +1,7 @@
 <h1>STUDENTS INDEX</h1>
 
 <% @students.each do |student| %>
-  <%= student.name %></a><br/><br/>
+  <%= student.name %><br/><br/>
 <% end %>
 
 <br/>
