--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,8 +1,5 @@
 <h1>STUDENTS INDEX</h1>
 
 <% @students.each do |student| %>
-  <%= student.first_name + " " + student.last_name %><br/><br/>
+  <%= student.first_name + " " + student.last_name %>
 <% end %>
-
-<br/>
-<br/>
